--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,19 +1,8 @@
 ---
-// Main layout
-import Main from '../layouts/main.astro';
-// import Post from '../layouts/post.astro';
-// Component Imports
-import Button from '../components/Button.astro';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-// Global CSS
-import '../styles/global.css';
+import BaseLayout from '@layouts/BaseLayout.astro';
 
-const title = 'Farma';
+const { frontmatter } = Astro.props;
 ---
 
-<Main content={{ title }}>
-	<Header />
-	<!-- <Post /> -->
-	<Footer />
-</Main>
+<BaseLayout>
+</BaseLayout>
