--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -5,5 +5,7 @@ const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
-	<slot />
+  <article class="prose lg:prose-xl px-auto">
+    <slot />
+  </article>
 </BaseLayout>
