--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,9 +1,18 @@
 ---
-import '../styles/global.css';
+import BaseLayout from '@layouts/BaseLayout.astro'
+// const allPosts = await Astro.glob('./posts/2022/12/30/*.md');
+const allPosts = await Astro.glob('./posts/**/*.md*');
 ---
-<a href="/">Home</a>
-<a href="/about/">About</a>
-<a href="/blog/">Blog</a>
-
-<h1>My Astro Learning Blog</h1>
-<p>This is where I will post about my journey learning Astro.</p>
+<BaseLayout>
+  <p>This is where I will post about my journey learning Astro.</p>
+  <ul>
+    {
+      allPosts.map((post) => {
+        return <li><a href={post.url}>{post.frontmatter.title}</a></li>;
+      })
+    }
+    <!-- <li><a href="/posts/post-1/">Post 1</a></li>
+    <li><a href="/posts/post-2/">Post 2</a></li>
+    <li><a href="/posts/post-3/">Post 3</a></li> -->
+  </ul>
+</BaseLayout>
