--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,13 @@
 body {
-  color: #4a4a4a;
+  /* color: #4a4a4a;
   font-size: 1rem;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.5; */
 
-  background: #fffacd;
-}
-
-body, button, input, select, textarea {
-  font-family: BlinkMacSystemFont,-apple-system,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Fira Sans","Droid Sans","Helvetica Neue",Helvetica,Arial,sans-serif;
-}
-
-* {
-  box-sizing: border-box;
+  background: #F6EBCD;
+  /* F6EBCD
+    B8AC72
+    695237
+    413327
+    7A746C */
 }
