--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,13 @@
-body {
+/* body { */
   /* color: #4a4a4a;
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5; */
 
-  background: #F6EBCD;
+  /* background: #F6EBCD; */
   /* F6EBCD
     B8AC72
     695237
     413327
     7A746C */
-}
+/* } */
