--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -10,10 +10,9 @@
 </button>
 
 <script>
-	import confetti from 'canvas-confetti';
 	const button = document.body.querySelector('button');
 
 	if (button) {
-		button.addEventListener('click', () => confetti());
+		button.addEventListener('click', () => {});
 	}
 </script>
