add BlogMain layout to index view

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,10 @@
 ---
 import BaseLayout from '@layouts/BaseLayout.astro';
+import BlogMain from '@layouts/BlogMain.astro';
 
 const { frontmatter } = Astro.props;
 ---
 
 <BaseLayout>
+	<BlogMain />
 </BaseLayout>
