adjust response layout

--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -8,7 +8,7 @@ const { frontmatter } = Astro.props;
 
 <BaseLayout>
   <article class={
-    clsx('prose lg:prose-xl',
+    clsx('prose lg:prose-2xl md:prose-xl',
     'mx-auto')
   }>
     <slot />
