refactor: Migrate to pnpm, update Astro and TailwindCSS configurations, and add GitHub Actions deployment workflow.

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import clsx from 'clsx';
 import Header from '@components/Header.astro';
 import Footer from '@components/Footer.astro';
 // const { content } = Astro.props;
-// import '@styles/global.css';
+import '@styles/global.css';
 // import '@styles/bulma/bulma.min.css';
 ---
 
