feat: Scaffold initial Astro project with base layouts, components, and content pages.

--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,6 +1,5 @@
 ---
-// Click button, get confetti!
-// Styled by Tailwind :)
+
 ---
 
 <button
@@ -10,9 +9,9 @@
 </button>
 
 <script>
-	const button = document.body.querySelector('button');
+	const button = document.body.querySelector("button");
 
 	if (button) {
-		button.addEventListener('click', () => {});
+		button.addEventListener("click", () => {});
 	}
 </script>
