--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,5 +1,7 @@
 ---
+
 ---
+
 <footer class="text-center py-12">
-  © 2023 Farma. Powered by <a class="underline" href="https://astro.build/">Astro</a>
+  © 2026 Farma Huang. All rights reserved.
 </footer>
