--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,16 @@
 ---
-import clsx from 'clsx';
+import clsx from "clsx";
 ---
-<nav class={clsx(
-  'border-b border-slate',
-  'py-2 px-6'
-)}>
-<!-- class={clsx('container',
-'mx-auto',
-'lg:max-w-4xl md:max-w-2xl'
-)}> -->
-  <div class={clsx('header',
-    'flex justify-between',
-    'mx-auto',
-    'lg:max-w-4xl md:max-w-3xl')}>
+
+<nav class={clsx("border-b border-slate", "py-2 px-6")}>
+  <div
+    class={clsx(
+      "header",
+      "flex justify-between",
+      "mx-auto",
+      "lg:max-w-4xl md:max-w-3xl",
+    )}
+  >
     <a href="/" class="text-xl">Farma</a>
   </div>
-  <!-- <div class={clsx('flex gap-2')}>
-    <a href="/archives">文章清單</a>
-    <a href="/tags">分類</a>
-    <a href="/about/">關於我</a>
-  </div> -->
 </nav>
