--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,18 +1,24 @@
 ---
-import BaseLayout from '@layouts/BaseLayout.astro'
-// const allPosts = await Astro.glob('./posts/2022/12/30/*.md');
-const allPosts = await Astro.glob('./posts/**/*.md*');
+import BaseLayout from "@layouts/BaseLayout.astro";
+import type { MarkdownInstance } from "astro";
+
+const allPosts = import.meta.glob<MarkdownInstance<Record<string, any>>>(
+  "./posts/**/*.md*",
+  { eager: true },
+);
 ---
+
 <BaseLayout>
   <p>This is where I will post about my journey learning Astro.</p>
   <ul>
     {
-      allPosts.map((post) => {
-        return <li><a href={post.url}>{post.frontmatter.title}</a></li>;
+      Object.values(allPosts).map((post) => {
+        return (
+          <li>
+            <a href={post.url}>{post.frontmatter.title}</a>
+          </li>
+        );
       })
     }
-    <!-- <li><a href="/posts/post-1/">Post 1</a></li>
-    <li><a href="/posts/post-2/">Post 2</a></li>
-    <li><a href="/posts/post-3/">Post 3</a></li> -->
   </ul>
 </BaseLayout>
