--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,6 @@
 ---
-import BaseLayout from '@layouts/BaseLayout.astro';
-import BlogMain from '@layouts/BlogMain.astro';
-
-const { frontmatter } = Astro.props;
+import BaseLayout from "@layouts/BaseLayout.astro";
+import BlogMain from "@layouts/BlogMain.astro";
 ---
 
 <BaseLayout>
