--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -15,7 +15,7 @@ const { pageTitle } = Astro.props;
 		<title>{pageTitle}</title>
 	</head>
 	<body
-		class="text-zinc-900 antialiased selection:bg-rose-200 selection:text-rose-900"
+		class="text-zinc-900 antialiased selection:bg-zinc-200 selection:text-zinc-900"
 	>
 		<div class="min-h-screen flex flex-col">
 			<NavBar client:load />
