fix: remove year from footer copyright notice.

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,5 +3,5 @@
 ---
 
 <footer class="text-center py-6">
-  © 2026 Farma Huang. All rights reserved.
+  © Farma Huang. All rights reserved.
 </footer>
